# Embedded-Software-Project

./: .gitignore  BUILD.bazel  MQTTClient.py  README.md  WORKSPACE  compile  compile.bat  program.txt  project.yml  script.sh
.devcontainer/: Dockerfile  devcontainer.json
app/: BUILD.bazel  CLIApp.c  main.c  mainCustom.c  mainTaskScheduler.c  mainTemperature.c  mainUartBuffer.c  mainUartInterrupt.c  mainUartPolling.c
docs/: conf.py  doxy.conf  index.rst
libs/bootcamp/: BUILD.bazel  circularBuffer.h  commandHandler.h  mockInterrupt.h  mockRegister.h  mockTemperature.h  mySinusFunction.h  task.h  taskQueue.h  temperature.h  timer.h  uart.h  uartBuffer.h
src/: circularBuffer.c  commandHandler.c  mySinusFunction.c  taskQueue.c  temperature.c  timer.c  uart.c  uartBuffer.c
test/: BUILD.bazel  test_circularBuffer.c  test_mySinusFunction.c  test_taskQueue.c  test_uart.c
