load("@AvrToolchain//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")

cc_library(
    name = "Library",
    srcs = glob(["src/**/*.c", "src/**/*.h"]),
    copts = cpu_frequency_flag() + ["-Ilibs"],
    visibility = ["//visibility:public"],
    deps = [
        "//libs/bootcamp:HdrOnlyLib",
    ]
)
